added jupyter notebook example
